test/sema/lambdas/lambda_field_access.yl
// RUN: compiler %s 2>&1 -res-dump | filecheck %s
fn main() {
  let n = 0;
  
  // CHECK: [[# @LINE + 1 ]]:21: error: failed to find member 'n' in '(lambda@<source>:6:3)'
  ->(){ return n; }.n;
}
